--- a/css/styles.css
+++ b/css/styles.css
@@ -116,6 +116,17 @@ footer p {
 
 }
 
+.copyright a:hover {
+    color: rgba(35, 196, 213, 0.75);
+}
+
+.footer-heart {
+    font-size: larger;
+}
+.footer-heart:hover {
+    cursor: pointer;
+    color: rgba(35, 196, 213, 0.75);
+}
 
 
 /* ============ Media Query ============ */
