--- a/css/styles.css
+++ b/css/styles.css
@@ -49,7 +49,8 @@ button {
     margin: 0.5rem auto;
     padding: 1rem 0.5rem;
     font-size: large;
-    border: 2px solid black;
+    /* border: 2px solid black; */
+    border: 2px solid var(--faded-blue);
 }
 
 button:hover {
